--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="/patrick/code/test/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>BikinKibin</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
     </div>
     <div class="body">
             <div class="logo-img">
-                <img src="/patrick/code/test/pic/trnsprnt-logo.png"/>
+                <img src="pic/trnsprnt-logo.png"/>
                 <div class="title-web">
                     <span>ART FOR LIVING</span>
                 </div>
